--- a/Nothing.html
+++ b/Nothing.html
@@ -1,11 +1,11 @@
-__->To compare 2D array__
+<b>->To compare 2D array</b>
 Arrays.sort(array, Comparator.comparingDouble(o -> o[0]));
 (or)
 Arrays.sort(array, (a, b) -> Integer.compare(a[0], b[0]));
 eg: array = [[1,3],[2,6],[8,10],[15,18],[2,3],[9,10]]
 output: array = [[1,3],[2,6],[2,3],[8,10],[9,10],[15,18]]
 
-__->Iteration of Map__
+<b>->Iteration of Map</b>
 
 Method-1:
 for(Map.Entry<Integer, Integer> entry : map.entrySet())
@@ -27,7 +27,8 @@ for (String value : hm.values())
     System.out.println("value: " + value);
    
    
-**->Iteration of Set**
+   
+<b>->Iteration of Set</b>
 Method-1: //Using for-each loop
 for(String values : set){
    System.out.println(values);
@@ -35,7 +36,6 @@ for(String values : set){
 
 Method-2: //iterating through the iterator
 set.add(1);set.add(2);
-
 Iterator value = set.iterator();
 while (value.hasNext()) {
     System.out.println(value.next());
